<resources>
    <string name="app_name">Yavalath</string>
    <string name="NoInternet">No internet connection</string>
    <string name="app_makers">By Wilhelm Thieme</string>
    <string name="enter_name">Enter name</string>
    <string name="enter">Enter</string>
    <string name="momentAgo">a moment ago</string>
    <string name="minuteAgo">1 minute ago</string>
    <string name="minutesAgo">%s minutes ago</string>
    <string name="About">About</string>
    <string name="fa_sign_in_alt">&#xf2f6;</string>
    <string name="fa_bolt">&#xf0e7;</string>
    <string name="fa_circle">&#xf111;</string>
    <string name="fa_check">&#xf058;</string>
    <string name="fa_nok">&#xf057;</string>
    <string name="fa_bars">&#xf0c9;</string>
    <string name="fa_sync">&#xf021;</string>
    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_acorn">&#xf6ae;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_share_square">&#xf14d;</string>
    <string name="fa_os_android">&#xf17b;</string>
    <string name="fa_os_ios">&#xf179;</string>
    <string name="fa_os_unknown">&#xf059;</string>
    <string name="fa_play">&#xf04b;</string>
    <string name="fa_arrow_down">&#xf063;</string>
    <string name="fa_smile">&#xf118;</string>
    <string name="fa_frown">&#xf119;</string>
    <string name="fa_meh">&#xf11a;</string>
    <string name="fa_trophy">&#xf091;</string>
    <string name="CountryUnknown">Unknown</string>
    <string name="NameMustNotBeEmpty">Name must not be empty</string>
    <string name="Name1MustNotBeEmpty">Name 1 must not be empty</string>
    <string name="Name2MustNotBeEmpty">Name 2 must not be empty</string>
    <string name="back">Back</string>
    <string name="no_players_found">No players</string>
    <string name="Inviting">Inviting %s for a game of Yavalath</string>
    <string name="InviteTimeOut">%s did not respond</string>
    <string name="active_time">00:00</string>
    <string name="Version">Version</string>
    <string name="VersionNr">V1.0</string>
    <string name="about_copyright">Copyright &#169; 2019 Wilhelm Thieme.</string>
    <string name="OK">OK</string>
    <string name="players_ready_for_a_game_of_yavalath">Players ready for a game of Yavalath</string>
    <string name="Title">YesNoTitle</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="InviteText">Do you accept the invitation from %s to play a game of Yavalath?</string>
    <string name="invite_not_accepted">Your invitation is declined</string>
    <string name="cant_play_self">You can\'t play Yavalath with yourself</string>
    <string name="PlayerWhite">%s - %s</string>
    <string name="White">White</string>
    <string name="Black">Black</string>
    <string name="PlayerBlack">%s - %s</string>
    <string name="vs">vs</string>
    <string name="to_move">%s to move</string>
    <string name="cant_play_same_name">You can\'t play against a player with the same name as you</string>
    <string name="AbandonText">Do you want to quit this game?</string>
    <string name="left_game">%s has left the game</string>
    <string name="OfflineText">%s is offline, what do you want to do?</string>
    <string name="Wait">Wait</string>
    <string name="Quit">Quit</string>
    <string name="wins">%s wins the game!</string>
    <string name="timems">%s:%s</string>
    <string name="timehms">%s:%s:%s</string>
    <string name="nr_of_moves">0</string>
    <string name="Rules">Rules</string>
    <string name="RulesTitle">The Rules Of The Game</string>
    <string name="clickRules"><u>Click to view the rules of <b>Yavalath</b></u></string>
    <string name="RulesTxt"><b><i>Yavalath</i></b> is a board game for 2 players.
        \n\nOne player has the white stones, and the other has the black ones. If it is your turn, you place a stone on the board.
        \n\nYou can place the stone on any empty field.
        \n\nThe purpose of the game is to be the first one to get \'4 in a row\'.
        \n\n<b>But be careful!</b>
        \n\nIf you get \'3 in a row\' you lose!
        \nHave fun playing this game!
</string>
    <string name="send">Send</string>
    <string name="new_game">New game</string>
    <string name="ReadyToStart">Play again?</string>
    <string name="no">N</string>
    <string name="yes">Y</string>
    <string name="draw">It\'s a draw!</string>
    <string name="Environment">Environment</string>
    <string name="Device">Device</string>
    <string name="Player">Player</string>
    <string name="debug_version">Debug version</string>
    <string name="enter_name1">Enter name 1</string>
    <string name="enter_name2">Enter name 2</string>
    <string name="Start">Start</string>
    <string name="rH2HInternet">Human vs Human - Internet</string>
    <string name="H2HLocal">Human vs Human - Local</string>
    <string name="HumanVsComputer">Human vs Computer</string>
    <string name="Modehvc">In this mode you play against the computer. Win 3 games and beat the high score.</string>
    <string name="Easy">easy</string>
    <string name="Intermediate">intermediate</string>
    <string name="Expert">hard</string>
    <string name="Extreme">extreme</string>
    <string name="modehvhl">In local mode you play against another person on the same device.</string>
    <string name="modehvhi">In this mode you play against another person over the internet, each player plays on his own device.</string>
    <string name="confirm">Confirm</string>
    <string name="computer">Computer</string>
    <string name="ComputerReserved">Computer is a reserved name</string>
    <string name="pluspoints">+%s</string>
    <string name="lengthnotbetween3and10">A name must be between 3 and 10 characters long</string>
    <string name="Level">Level %s</string>
    <string name="privacy">Privacy Policy</string>
    <string name="PrivacuUrl">https://wthieme.github.io/privacyyavalath_en.html</string>
    <string name="PrivacyTxt">Loading privacy policy ...</string>
    <string name="ErrorLoadingPrivacy">Error loading privacy policy</string>
    <string name="medal">%s medal for level %s</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="bronze">Bronze</string>
    <string name="high_scores">High scores</string>
    <string name="time000000">00:00:00</string>
    <string name="white_dove">Speler</string>
    <string name="youScore">You: %s</string>
    <string name="sound">Sound</string>
    <string name="soundon">Sound on</string>
    <string name="settings">Settings</string>
</resources>

