<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clipChildren="false"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/tvYavalath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvFcmBolt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/tvOnline"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:alpha="0"
        android:text="@string/fa_bolt"
        android:textColor="@color/colorYellow"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/fa_circle"
        android:textColor="@color/colorGreen"
        android:textSize="18sp" />

    <View
        android:id="@+id/vLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tvYavalath"
        android:layout_marginTop="10dp"
        android:background="@color/colorDisabled"/>

    <LinearLayout
        android:id="@+id/llWhite"
        android:layout_width="wrap_content"
        android:layout_below="@+id/vLine"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tvPlayerWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PlayerWhite"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvWhite"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/White"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvVs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vLine"
        android:layout_toEndOf="@+id/llWhite"
        android:layout_toStartOf="@+id/llBlack"
        android:layout_marginTop="30dp"
        android:text="@string/vs"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/llBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vLine"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/tvPlayerBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PlayerBlack"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvBlack"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Black"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNrMoves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvToMove"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/nr_of_moves"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvToMove"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/time"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvToMove"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/to_move"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

</RelativeLayout>