<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clipChildren="false"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/tvFcmBolt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:alpha="0"
        android:padding="10sp"
        android:text="@string/fa_bolt"
        android:textAlignment="center"
        android:textColor="@color/colorYellow"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="10sp"
        android:text="@string/fa_bars"
        android:textAlignment="center"
        android:textColor="@color/colorRed"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/app_name"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvAppmakers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_makers"
        android:textColor="@color/colorDisabled"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="0dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:width="200dp"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnEnter"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="@color/colorTint"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvrulestxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:autoLink="web"
            android:text="@string/clickRules"
            android:textAlignment="center"
            android:textColor="@color/colorDisabled"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>