<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvRulesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/RulesTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRulesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRulesTitle"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/RulesTxt"
        android:textColor="@color/colorText"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btOk"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_below="@id/tvRulesText"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorButtonBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/OK"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>