<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPrivacyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/privacy"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPrivacyTitle"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/tvPrivacyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/PrivacyTxt"
            android:textColor="@color/colorText"
            android:textSize="14sp" />
    </ScrollView>

    <Button
        android:id="@+id/btOk"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@color/colorButtonBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/OK"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>