<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clipChildren="false"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvFcmBolt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:alpha="0"
        android:text="@string/fa_bolt"
        android:textColor="@color/colorYellow"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/colorTint"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPlayersListTitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBack"
        android:padding="10sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/players_ready_for_a_game_of_yavalath"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp" />

    <ListView
            android:id="@+id/lvPlayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvPlayersListTitel"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:divider="@color/colorDisabled"
            android:dividerHeight="1dp" />

        <TextView
            android:id="@+id/tvNoPlayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvPlayersListTitel"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/no_players_found"
            android:textSize="18sp" />

    <TextView
        android:id="@+id/tvInviting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:elevation="18dp"
        android:text=""
        android:textSize="16sp" />

</RelativeLayout>